--- a/Sidebery.css
+++ b/Sidebery.css
@@ -1,4 +1,5 @@
   /*   COLORS   */
+
 #root.root {
   --toolbar-bg:                        var(--frame-bg);
   --nav-btn-active-shadow:             none;
@@ -8,11 +9,10 @@
 
 
 #root[data-frame-color-scheme=dark] {
+  --accent-color:                      345;
 
-  --accent-color:                      260;
   --accent-lightness:                  29%;
   --accent-text-lightness:             45%;
-
 
   --frame-bg:                          hsl(252, 4%, 5%) !important;
   --ctx-menu-bg:                       hsl(252, 4%, 8%);
@@ -20,7 +20,6 @@
   --ctx-menu-shadow:                   0 0 0 1px var(--ff-popup-border,black), 0 0 16px 0 black;
   --popup-bg:                          var(--ctx-menu-bg);
   --notification-bg:                   var(--ctx-menu-bg);
-
 
   .Tab[data-active="true"] .fav-icon   {fill: #fff}
   .popup-container                     {background-color: rgba(0,0,0,.6)}
@@ -35,15 +34,19 @@
 }
 
 
+#root[data-frame-color-scheme=light] {
+  --accent-lightness:                  70%;
+  --accent-text-lightness:             50%;
+
+  --frame-bg:                          #F9F9FB;
+}
+
+
+
   /*   Active tab color   */
 
-#root[data-frame-color-scheme="dark"] :is(.Tab[data-active="true"][data-edit="false"] .body, .NavigationBar .nav-item[data-active="true"]) {
-  background: linear-gradient(145deg, black, hsl(calc(var(--accent-color) - 10), 82%, var(--accent-lightness)), hsl(var(--accent-color), 82%, calc(var(--accent-lightness) + 10%)), black); --tabs-activated-shadow: 0 1px 4px -1px rgba(0,0,0,0.9), inset 0 0 0 1px var(--s-act-el-border, rgba(255,255,255,0.1))}
-
-#root[data-frame-color-scheme=light] :is(.Tab[data-active="true"][data-edit="false"] .body, .NavigationBar .nav-item[data-active="true"]) {
-  background: linear-gradient(145deg, #9498e7, #d29ce6)}
-
-
+#root :is(.Tab[data-active="true"][data-edit="false"] .body, .NavigationBar .nav-item[data-active="true"]) {
+  background: linear-gradient(145deg, transparent, hsl(calc(var(--accent-color) - 10), 82%, var(--accent-lightness)), hsl(var(--accent-color), 82%, calc(var(--accent-lightness) + 10%)), transparent); --tabs-activated-shadow: 0 1px 4px -1px rgba(0,0,0,0.9), inset 0 0 0 1px var(--s-act-el-border, rgba(255,255,255,0.1))}
 
 
 
@@ -52,13 +55,6 @@
 
 #root[data-act-el-color-scheme="light"], #root[data-frame-color-scheme="light"] .Tab[data-colorized="true"]  {
   --tabs-activated-shadow: inset 0 0 0 1px var(--s-act-el-border, rgba(0,0,0,0.1))}
-
-
-
-#root[data-frame-color-scheme=light] {
-  --frame-bg:                      #F9F9FB;
-}
-
 
 
 
